--- a/trunk/build.properties
+++ b/trunk/build.properties
@@ -17,16 +17,22 @@ profilechecker.docs.api=${profilechecker.docs}/api
 profilechecker.report=${profilechecker.docs}/report
 profilechecker.report.cobertura=${profilechecker.report}/cobertura
 profilechecker.report.test=${profilechecker.report}/test
+profilechecker.release=${profilechecker.base}/release
 
 # Files
 profilechecker.jar=${profilechecker.base}/profilechecker.jar
-profilechecker.release=${profilechecker.base}/profilechecker.zip
+profilechecker.releasezip=${profilechecker.release}/profilechecker.zip
 
 # Lib JARs
 easymock.jar=${profilechecker.lib}/easymock.jar
 junit.jar=${profilechecker.lib}/junit.jar
 log4j.jar=${profilechecker.lib}/log4j.jar
 easyaccept.jar=${profilechecker.lib}/easyaccept.jar
+commons-beanutils.jar=${profilechecker.lib}/commons-beanutils.jar
+commons-beanutils-bean-collections.jar=${profilechecker.lib}/commons-beanutils-bean-collections.jar
+commons-beanutils-core.jar=${profilechecker.lib}/commons-beanutils-core.jar
+commons-logging.jar=${profilechecker.lib}/commons-logging-1.1.jar
+commons-cli.jar=${profilechecker.lib}/commons-cli-1.1.jar
 
 # Classpath
-profilechecker.classpath=${profilechecker.classes-cobertura}:${profilechecker.classes}:${profilechecker.classes-test}:${easymock.jar}:${junit.jar}:${log4j.jar}
+profilechecker.classpath=${profilechecker.classes-cobertura}:${profilechecker.classes}:${profilechecker.classes-test}:${easymock.jar}:${junit.jar}:${log4j.jar}:${commons-beanutils.jar}:${commons-beanutils-bean-collections.jar}:${commons-beanutils-core.jar}:${commons-logging.jar}:${commons-cli.jar}:${easyaccept.jar}
