Eclipse plugin created.

--- a/build.properties
+++ b/build.properties
@@ -36,3 +36,13 @@ commons-cli.jar=${profilechecker.lib}/commons-cli-1.1.jar
 
 # Classpath
 profilechecker.classpath=${profilechecker.classes-cobertura}:${profilechecker.classes}:${profilechecker.classes-test}:${easymock.jar}:${junit.jar}:${log4j.jar}:${commons-beanutils.jar}:${commons-beanutils-bean-collections.jar}:${commons-beanutils-core.jar}:${commons-logging.jar}:${commons-cli.jar}:${easyaccept.jar}
+bin.includes = profilechecker.jar,\
+               classes/,\
+               lib/commons-cli-1.1.jar,\
+               lib/commons-logging-1.1.jar,\
+               lib/log4j.jar
+jars.compile.order = classes/,\
+                     profilechecker.jar
+source.classes/ = src/,\
+                  src-eclipse
+output.classes/ = classes/
