--- a/trunk/build.properties
+++ b/trunk/build.properties
@@ -1,6 +1,6 @@
 # Basic configuration
 profilechecker.name=ProfileChecker
-profilechecker.version=0.1
+profilechecker.version=1.0.0
 profilechecker.mainclass=profilechecker.Main
 
 # Directories
@@ -40,9 +40,21 @@ bin.includes = profilechecker.jar,\
                classes/,\
                lib/commons-cli-1.1.jar,\
                lib/commons-logging-1.1.jar,\
-               lib/log4j.jar
+               lib/log4j.jar,\
+               plugin.xml,\
+               build.properties,\
+               src/,\
+               src-eclipse/,\
+               META-INF/,\
+               ./
 jars.compile.order = classes/,\
-                     profilechecker.jar
+                     profilechecker.jar,\
+                     META-INF/
 source.classes/ = src/,\
                   src-eclipse
 output.classes/ = classes/
+src.includes = src/,\
+               src-eclipse/
+output.META-INF/ = bin/
+source.META-INF/ = src-eclipse/,\
+                   src/
