--- a/trunk/plugin.xml
+++ b/trunk/plugin.xml
@@ -3,39 +3,31 @@
 <plugin>
 
    <extension
-         id="sampleBuilder"
-         name="ProfileChecker Builder"
-         point="org.eclipse.core.resources.builders">
-      <builder
-            hasNature="true">
-         <run
-               class="profilechecker.eclipse.SampleBuilder">
-         </run>
-      </builder>
-   </extension>
-   <extension
-         id="sampleNature"
-         name="ProfileChecker Nature"
-         point="org.eclipse.core.resources.natures">
-      <runtime>
-         <run
-               class="profilechecker.eclipse.SampleNature">
-         </run>
-      </runtime>
-      <builder
-            id="ProfileChecker.sampleBuilder">
-      </builder>
-   </extension>
-   <extension
          point="org.eclipse.ui.popupMenus">
       <objectContribution
             adaptable="true"
-            objectClass="org.eclipse.core.resources.IProject"
-            nameFilter="*"
+            objectClass="org.eclipse.core.resources.IResource"
+            nameFilter="*xmi"
             id="ProfileChecker.contribution1">
          <action
                label="Validate with ProfileChecker"
-               class="profilechecker.eclipse.ToggleNatureAction"
+               class="profilechecker.eclipse.ValidateWithProfileCheker"
+               menubarPath="additions"
+               enablesFor="+"
+               id="ProfileChecker.addRemoveNatureAction">
+         </action>
+      </objectContribution>
+   </extension>
+      <extension
+         point="org.eclipse.ui.popupMenus">
+      <objectContribution
+            adaptable="true"
+            objectClass="org.eclipse.core.resources.IResource"
+            nameFilter="*xmi"
+            id="ProfileChecker.contribution2">
+         <action
+               label="Clear ProfileChecker Markers"
+               class="profilechecker.eclipse.ClearMarkersProfileChecker"
                menubarPath="additions"
                enablesFor="+"
                id="ProfileChecker.addRemoveNatureAction">
