--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="src-test"/>
 	<classpathentry kind="src" path="src-eclipse"/>
+	<classpathentry exported="true" kind="lib" path="META-INF/"/>
 	<classpathentry exported="true" kind="lib" path="classes/"/>
 	<classpathentry kind="lib" path="lib/easyaccept.jar"/>
 	<classpathentry kind="lib" path="lib/easymock.jar"/>
